Added chatGPT to routing.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -347,6 +347,10 @@
                                         <input type="checkbox" id="bypassRussia" name="bypassRussia" value="true">
                                         <label for="bypassRussia">Bypass Russia</label>
                                     </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
+                                        <label for="bypassOpenAi">Bypass ChatGPT</label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
