Added release note.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -375,8 +375,7 @@
                         <div class="form-control">
                             <label for="customBypassRules">🟩 Bypass IPs / Domains</label>
                             <div>
-                                <textarea type="text" id="customBypassRules" name="customBypassRules"
-                                    rows="1"></textarea>
+                                <textarea type="text" id="customBypassRules" name="customBypassRules"rows="1"></textarea>
                             </div>
                         </div>
                         <div class="form-control">
