Refactored, Clients compatiblity.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -521,10 +521,10 @@
                             </div>
                         </td>
                         <td>
-                            <button onclick="openQR('full-normal', 'xray', 'Full-Normal', 'Full normal Subscription')">
+                            <button onclick="openQR('full-normal', 'xray', 'Full Normal', 'Full normal Subscription')">
                                 QR Code&nbsp;<span class="material-symbols-outlined">qr_code</span>
                             </button>
-                            <button onclick="subURL('full-normal', 'xray', 'Full-Normal')">
+                            <button onclick="subURL('full-normal', 'xray', 'Full Normal')">
                                 Copy Sub<span class="material-symbols-outlined">format_list_bulleted</span>
                             </button>
                         </td>
@@ -542,10 +542,10 @@
                         </td>
                         <td>
                             <button
-                                onclick="openQR('full-normal', 'sfa', 'Full-Normal', 'Full normal Subscription', true)">
+                                onclick="openQR('full-normal', 'sfa', 'Full Normal', 'Full normal Subscription', true)">
                                 QR Code&nbsp;<span class="material-symbols-outlined">qr_code</span>
                             </button>
-                            <button onclick="subURL('full-normal', 'sfa', 'Full-Normal')">
+                            <button onclick="subURL('full-normal', 'sfa', 'Full Normal')">
                                 Copy Sub<span class="material-symbols-outlined">format_list_bulleted</span>
                             </button>
                             <button onclick="dlURL('full-normal', 'sfa')">
@@ -577,10 +577,10 @@
                             </div>
                         </td>
                         <td>
-                            <button onclick="openQR('full-normal', 'clash', 'Full-Normal', 'Full normal Subscription')">
+                            <button onclick="openQR('full-normal', 'clash', 'Full Normal', 'Full normal Subscription')">
                                 QR Code&nbsp;<span class="material-symbols-outlined">qr_code</span>
                             </button>
-                            <button onclick="subURL('full-normal', 'clash', 'Full-Normal')">
+                            <button onclick="subURL('full-normal', 'clash', 'Full Normal')">
                                 Copy Sub<span class="material-symbols-outlined">format_list_bulleted</span>
                             </button>
                             <button onclick="dlURL('full-normal', 'clash')">
@@ -807,10 +807,10 @@
                             </div>
                         </td>
                         <td>
-                            <button onclick="openQR('warp-pro', 'xray-pro', 'Warp-Pro', 'Warp Pro Subscription')">
+                            <button onclick="openQR('warp-pro', 'xray-pro', 'Warp Pro', 'Warp Pro Subscription')">
                                 QR Code&nbsp;<span class="material-symbols-outlined">qr_code</span>
                             </button>
-                            <button onclick="subURL('warp-pro', 'xray-pro', 'Warp-Pro')">
+                            <button onclick="subURL('warp-pro', 'xray-pro', 'Warp Pro')">
                                 Copy Sub<span class="material-symbols-outlined">format_list_bulleted</span>
                             </button>
                         </td>
@@ -831,10 +831,10 @@
                             </div>
                         </td>
                         <td>
-                            <button onclick="openQR('warp-pro', 'xray-knocker', 'Warp-Pro', 'Warp Pro Subscription')">
+                            <button onclick="openQR('warp-pro', 'xray-knocker', 'Warp Pro', 'Warp Pro Subscription')">
                                 QR Code&nbsp;<span class="material-symbols-outlined">qr_code</span>
                             </button>
-                            <button onclick="subURL('warp-pro', 'xray-knocker', 'Warp-Pro')">
+                            <button onclick="subURL('warp-pro', 'xray-knocker', 'Warp Pro')">
                                 Copy Sub<span class="material-symbols-outlined">format_list_bulleted</span>
                             </button>
                         </td>
@@ -863,10 +863,10 @@
                             </div>
                         </td>
                         <td>
-                            <button onclick="openQR('warp-pro', 'clash-pro', 'Warp-Pro', 'Warp Pro Subscription')">
+                            <button onclick="openQR('warp-pro', 'clash-pro', 'Warp Pro', 'Warp Pro Subscription')">
                                 QR Code&nbsp;<span class="material-symbols-outlined">qr_code</span>
                             </button>
-                            <button onclick="subURL('warp-pro', 'clash-pro', 'Warp-Pro')">
+                            <button onclick="subURL('warp-pro', 'clash-pro', 'Warp Pro')">
                                 Copy Sub<span class="material-symbols-outlined">format_list_bulleted</span>
                             </button>
                             <button onclick="dlURL('warp-pro', 'clash-pro')">
@@ -883,10 +883,10 @@
                         </td>
                         <td>
                             <button
-                                onclick="openQR('warp-pro', 'hiddify-pro', 'Warp-Pro', 'Warp Pro Subscription', false, true)">
+                                onclick="openQR('warp-pro', 'hiddify-pro', 'Warp Pro', 'Warp Pro Subscription', false, true)">
                                 QR Code&nbsp;<span class="material-symbols-outlined">qr_code</span>
                             </button>
-                            <button onclick="subURL('warp-pro', 'hiddify-pro', 'Warp-Pro', true)">
+                            <button onclick="subURL('warp-pro', 'hiddify-pro', 'Warp Pro', true)">
                                 Copy Sub<span class="material-symbols-outlined">format_list_bulleted</span>
                             </button>
                         </td>
