UI, Workerless optimized.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -14,8 +14,10 @@
 
 <body>
     <h1>
-        BPB Panel <span id="panel-version" style="font-size: smaller;">v__PANEL_VERSION__</span> <img class="icon"
-            src="/favicon.ico" alt="BPB Logo">
+        <img class="icon" src="/favicon.ico" alt="BPB Logo"> BPB Panel <span id="panel-version"
+            style="font-size: smaller;">
+            v__PANEL_VERSION__
+        </span>
     </h1>
     <div class="form-container container">
         <h2><span class="material-symbols-outlined">settings</span> Settings</h2>
@@ -375,7 +377,8 @@
                         <div class="form-control">
                             <label for="customBypassRules">🟩 Bypass IPs / Domains</label>
                             <div>
-                                <textarea type="text" id="customBypassRules" name="customBypassRules"rows="1"></textarea>
+                                <textarea type="text" id="customBypassRules" name="customBypassRules"
+                                    rows="1"></textarea>
                             </div>
                         </div>
                         <div class="form-control">
