--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BPB Panel</title>
+    <title>68</title>
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
@@ -14,7 +14,7 @@
 
 <body>
     <h1>
-        <img class="icon" src="/favicon.ico" alt="BPB Logo"> BPB Panel <span id="panel-version"
+        <img class="icon" src="/favicon.ico" alt="68 Logo"> 68 <span id="panel-version"
             style="font-size: smaller;">
             v__PANEL_VERSION__
         </span>
