--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -345,10 +345,6 @@
                                         <input type="checkbox" id="bypassRussia" name="bypassRussia" value="true">
                                         <label for="bypassRussia">Bypass Russia</label>
                                     </div>
-                                    <div class="routing">
-                                        <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
-                                        <label for="bypassOpenAi">Bypass ChatGPT</label>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -385,6 +381,37 @@
                             <label for="customBlockRules">🟥 Block IPs / Domains</label>
                             <div>
                                 <textarea type="text" id="customBlockRules" name="customBlockRules" rows="1"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <h3><span class="material-symbols-outlined">tune</span> Sanction Rules</h3>
+                        <div class="form-control">
+                            <label for="antiSanctionDNS">🌏 Anti Sanction DNS</label>
+                            <div>
+                                <input type="text" id="antiSanctionDNS" name="antiSanctionDNS" required>
+                            </div>
+                        </div>
+                        <div class="form-control">
+                            <label for="bypass-sanction-rules">🟩 Bypass Sanction rules</label>
+                            <div>
+                                <div id="bypass-sanction-rules" class="rules inner-container">
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassGoogle" name="bypassGoogle" value="true">
+                                        <label for="bypassGoogle">Bypass Google</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
+                                        <label for="bypassOpenAi">Bypass ChatGPT</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-control">
+                            <label for="customBypassSanctionRules">🟩 Bypass Sanction Domains</label>
+                            <div>
+                                <textarea type="text" id="customBypassSanctionRules" name="customBypassSanctionRules"
+                                    rows="1"></textarea>
                             </div>
                         </div>
                     </div>
