Added microsoft to bypass sanction rules.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -401,6 +401,10 @@
                                         <label for="bypassGoogle">Bypass Google</label>
                                     </div>
                                     <div class="routing">
+                                        <input type="checkbox" id="bypassMicrosoft" name="bypassMicrosoft" value="true">
+                                        <label for="bypassMicrosoft">Bypass Google</label>
+                                    </div>
+                                    <div class="routing">
                                         <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
                                         <label for="bypassOpenAi">Bypass ChatGPT</label>
                                     </div>
