Added microsoft to bypass sanction rules.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -393,7 +393,7 @@
                             </div>
                         </div>
                         <div class="form-control">
-                            <label for="bypass-sanction-rules">🟩 Bypass Sanction rules</label>
+                            <label for="bypass-sanction-rules">🟩 Bypass rules</label>
                             <div>
                                 <div id="bypass-sanction-rules" class="rules inner-container">
                                     <div class="routing">
@@ -402,7 +402,7 @@
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassMicrosoft" name="bypassMicrosoft" value="true">
-                                        <label for="bypassMicrosoft">Bypass Google</label>
+                                        <label for="bypassMicrosoft">Bypass Microsoft</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
@@ -412,7 +412,7 @@
                             </div>
                         </div>
                         <div class="form-control">
-                            <label for="customBypassSanctionRules">🟩 Bypass Sanction Domains</label>
+                            <label for="customBypassSanctionRules">🟩 Bypass Domains</label>
                             <div>
                                 <textarea type="text" id="customBypassSanctionRules" name="customBypassSanctionRules"
                                     rows="1"></textarea>
