Expanded anti sanction geosites.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -397,16 +397,36 @@
                             <div>
                                 <div id="bypass-sanction-rules" class="rules inner-container">
                                     <div class="routing">
+                                        <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
+                                        <label for="bypassOpenAi">Bypass ChatGPT</label>
+                                    </div>
+                                    <div class="routing">
                                         <input type="checkbox" id="bypassGoogle" name="bypassGoogle" value="true">
                                         <label for="bypassGoogle">Bypass Google</label>
                                     </div>
                                     <div class="routing">
-                                        <input type="checkbox" id="bypassMicrosoft" name="bypassMicrosoft" value="true">
+                                        <input type="checkbox" id="bypassMicrosoft" name="bypassMicrosoft" value="true"> 
                                         <label for="bypassMicrosoft">Bypass Microsoft</label>
                                     </div>
                                     <div class="routing">
-                                        <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
-                                        <label for="bypassOpenAi">Bypass ChatGPT</label>
+                                        <input type="checkbox" id="bypassOracle" name="bypassOracle" value="true">
+                                        <label for="bypassOracle">Bypass Oracle</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassDocker" name="bypassDocker" value="true">
+                                        <label for="bypassDocker">Bypass Docker</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassIntel" name="bypassIntel" value="true">
+                                        <label for="bypassIntel">Bypass Intel</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassAsus" name="bypassAsus" value="true">
+                                        <label for="bypassAsus">Bypass Asus</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassHp" name="bypassHp" value="true">
+                                        <label for="bypassHp">Bypass HP</label>
                                     </div>
                                 </div>
                             </div>
