Removed NikaNG from supported apps.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -240,7 +240,7 @@
                 <div class="section">
                     <div class="container">
                         <div class="section">
-                            <h3><span class="material-symbols-rounded">tune</span> MahsaNG - NikaNG - Hiddify</h3>
+                            <h3><span class="material-symbols-rounded">tune</span> MahsaNG - Hiddify</h3>
                             <div class="form-control">
                                 <label for="hiddifyNoiseMode">😵‍💫 Hiddify Mode</label>
                                 <div>
@@ -251,7 +251,7 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                                <label for="knockerNoiseMode">😵‍💫 NikaNG Mode</label>
+                                <label for="knockerNoiseMode">😵‍💫 MahsaNG Mode</label>
                                 <div>
                                     <input type="text" id="knockerNoiseMode" name="knockerNoiseMode"
                                         pattern="^(none|quic|random|[0-9A-Fa-f]+)$"
@@ -470,10 +470,6 @@
                             </div>
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
-                                <span>NikaNG</span>
-                            </div>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
                                 <span>MahsaNG</span>
                             </div>
                             <div>
@@ -552,10 +548,6 @@
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>v2rayNG</span>
-                            </div>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
-                                <span>NikaNG</span>
                             </div>
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
@@ -660,10 +652,6 @@
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>v2rayNG</span>
-                            </div>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
-                                <span>NikaNG</span>
                             </div>
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
@@ -871,10 +859,6 @@
                     </tr>
                     <tr>
                         <td>
-                            <div>
-                                <span class="material-symbols-rounded">verified</span>
-                                <span>NikaNG</span>
-                            </div>
                             <div>
                                 <span class="material-symbols-rounded">verified</span>
                                 <span>MahsaNG</span>
