Xray bug fix, sing-box DNS, UI

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -331,19 +331,19 @@
                                 <div id="bypass-rules" class="rules inner-container">
                                     <div class="routing">
                                         <input type="checkbox" id="bypassLAN" name="bypassLAN" value="true">
-                                        <label for="bypassLAN">Bypass LAN</label>
+                                        <label for="bypassLAN">LAN</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassIran" name="bypassIran" value="true">
-                                        <label for="bypassIran">Bypass Iran</label>
+                                        <label for="bypassIran">Iran</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassChina" name="bypassChina" value="true">
-                                        <label for="bypassChina">Bypass China</label>
+                                        <label for="bypassChina">China</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassRussia" name="bypassRussia" value="true">
-                                        <label for="bypassRussia">Bypass Russia</label>
+                                        <label for="bypassRussia">Russia</label>
                                     </div>
                                 </div>
                             </div>
@@ -354,15 +354,15 @@
                                 <div id="block-rules" class="rules inner-container">
                                     <div class="routing">
                                         <input type="checkbox" id="blockAds" name="blockAds" value="true">
-                                        <label for="blockAds">Block Ads.</label>
+                                        <label for="blockAds">Ads.</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="blockPorn" name="blockPorn" value="true">
-                                        <label for="blockPorn">Block Porn</label>
+                                        <label for="blockPorn">Porn</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="blockUDP443" name="blockUDP443" value="true">
-                                        <label for="blockUDP443">Block QUIC</label>
+                                        <label for="blockUDP443">QUIC</label>
                                     </div>
                                 </div>
                             </div>
@@ -398,35 +398,35 @@
                                 <div id="bypass-sanction-rules" class="rules inner-container">
                                     <div class="routing">
                                         <input type="checkbox" id="bypassOpenAi" name="bypassOpenAi" value="true">
-                                        <label for="bypassOpenAi">Bypass ChatGPT</label>
+                                        <label for="bypassOpenAi">ChatGPT</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassGoogle" name="bypassGoogle" value="true">
-                                        <label for="bypassGoogle">Bypass Google</label>
+                                        <label for="bypassGoogle">Google</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassMicrosoft" name="bypassMicrosoft" value="true"> 
-                                        <label for="bypassMicrosoft">Bypass Microsoft</label>
+                                        <label for="bypassMicrosoft">Microsoft</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassOracle" name="bypassOracle" value="true">
-                                        <label for="bypassOracle">Bypass Oracle</label>
+                                        <label for="bypassOracle">Oracle</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassDocker" name="bypassDocker" value="true">
-                                        <label for="bypassDocker">Bypass Docker</label>
+                                        <label for="bypassDocker">Docker</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassIntel" name="bypassIntel" value="true">
-                                        <label for="bypassIntel">Bypass Intel</label>
+                                        <label for="bypassIntel">Intel</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassAsus" name="bypassAsus" value="true">
-                                        <label for="bypassAsus">Bypass Asus</label>
+                                        <label for="bypassAsus">Asus</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassHp" name="bypassHp" value="true">
-                                        <label for="bypassHp">Bypass HP</label>
+                                        <label for="bypassHp">HP</label>
                                     </div>
                                 </div>
                             </div>
