Added AMD, Nvidia, Lenovo, Epic games, Adobe to sanction rules.

--- a/src/assets/panel/index.html
+++ b/src/assets/panel/index.html
@@ -413,8 +413,24 @@
                                         <label for="bypassDocker">Docker</label>
                                     </div>
                                     <div class="routing">
+                                        <input type="checkbox" id="bypassAdobe" name="bypassAdobe" value="true">
+                                        <label for="bypassAdobe">Adobe</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassEpicGames" name="bypassEpicGames" value="true">
+                                        <label for="bypassEpicGames">Epic Games</label>
+                                    </div>
+                                    <div class="routing">
                                         <input type="checkbox" id="bypassIntel" name="bypassIntel" value="true">
                                         <label for="bypassIntel">Intel</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassAmd" name="bypassAmd" value="true">
+                                        <label for="bypassAmd">AMD</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassNvidia" name="bypassNvidia" value="true">
+                                        <label for="bypassNvidia">Nvidia</label>
                                     </div>
                                     <div class="routing">
                                         <input type="checkbox" id="bypassAsus" name="bypassAsus" value="true">
@@ -423,6 +439,10 @@
                                     <div class="routing">
                                         <input type="checkbox" id="bypassHp" name="bypassHp" value="true">
                                         <label for="bypassHp">HP</label>
+                                    </div>
+                                    <div class="routing">
+                                        <input type="checkbox" id="bypassLenovo" name="bypassLenovo" value="true">
+                                        <label for="bypassLenovo">Lenovo</label>
                                     </div>
                                 </div>
                             </div>
